syntax = "proto3";

package event;
option go_package = "pkg/calendar;calendar_pb";

import "google/protobuf/timestamp.proto";

service Calendar {
  rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse) {}
  rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse) {}
  rpc GetEvents (GetEventsRequest) returns (GetEventsResponse) {}
  rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse) {}
}

message Event {
  uint64                    id          = 1;
  string                    title       = 2;
  google.protobuf.Timestamp start_data  = 3;
  google.protobuf.Timestamp end_data    = 4;
  string                    description = 5;
  uint64                    owner_id    = 6;
  string                    remind_in   = 7;
}

message CreateEventRequest {
  Event event = 1;
}

message CreateEventResponse {}

message UpdateEventRequest {
  Event event = 1;
}

message UpdateEventResponse {}

message GetEventsRequest {
  google.protobuf.Timestamp start_data = 1;
  google.protobuf.Timestamp end_data   = 2;
}

message GetEventsResponse {
  repeated Event event = 1;
}

message DeleteEventRequest {
  Event event = 1;
}

message DeleteEventResponse {}
